--- a/scripts/live_test/CLITest.yml
+++ b/scripts/live_test/CLITest.yml
@@ -475,6 +475,7 @@ stages:
           git config --global user.name "AzurePipelines"
   
           # print variables
+          echo "PLATFORM: $(PLATFORM)"
           echo "USER_TARGET: $(USER_TARGET)"
           echo "USER_REPO: $(USER_REPO)"
           echo "USER_REPO_EXT: $(USER_REPO_EXT)"
@@ -1037,6 +1038,7 @@ stages:
           git config --global user.name "AzurePipelines"
   
           # print variables
+          echo "PLATFORM: $(PLATFORM)"
           echo "USER_TARGET: $(USER_TARGET)"
           echo "USER_REPO: $(USER_REPO)"
           echo "USER_REPO_EXT: $(USER_REPO_EXT)"
@@ -1599,6 +1601,7 @@ stages:
           git config --global user.name "AzurePipelines"
   
           # print variables
+          echo "PLATFORM: $(PLATFORM)"
           echo "USER_TARGET: $(USER_TARGET)"
           echo "USER_REPO: $(USER_REPO)"
           echo "USER_REPO_EXT: $(USER_REPO_EXT)"
