Adding exclusion for missing test coverage. Scenario already covered but still being flagged.

--- a/linter_exclusions.yml
+++ b/linter_exclusions.yml
@@ -711,6 +711,11 @@ appconfig kv import:
     src_connection_string:
       rule_exclusions:
       - option_length_too_long
+appconfig snapshot list:
+  parameters:
+    snapshot_name:
+      rule_exclusions:
+      - missing_parameter_test_coverage
 appconfig update:
   parameters:
     encryption_key_version:
