--- a/src/azure-cli/azure/cli/command_modules/network/tests/latest/recordings/test_dns_alias.yaml
+++ b/src/azure-cli/azure/cli/command_modules/network/tests/latest/recordings/test_dns_alias.yaml
@@ -22,7 +22,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_dns_alias000001/providers/Microsoft.Network/dnsZones/mytestzone1.com?api-version=2023-07-01-preview
   response:
     body:
-      string: '{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/dnszones\/mytestzone1.com","name":"mytestzone1.com","type":"Microsoft.Network\/dnszones","etag":"afaa89ec-3b32-431a-a326-00026be60138","location":"global","tags":{},"properties":{"maxNumberOfRecordSets":10000,"maxNumberOfRecordsPerRecordSet":null,"nameServers":["ns1-38.daily.azure-dns.com.","ns2-38.daily.azure-dns.net.","ns3-38.daily.azure-dns.org.","ns4-38.daily.azure-dns.info."],"numberOfRecordSets":2,"zoneType":"Public"}}'
+      string: '{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/dnszones\/mytestzone1.com","name":"mytestzone1.com","type":"Microsoft.Network\/dnszones","etag":"577b880b-486f-4bd2-8ae2-d951db5e1a9b","location":"global","tags":{},"properties":{"maxNumberOfRecordSets":10000,"maxNumberOfRecordsPerRecordSet":null,"nameServers":["ns1-38.daily.azure-dns.com.","ns2-38.daily.azure-dns.net.","ns3-38.daily.azure-dns.org.","ns4-38.daily.azure-dns.info."],"numberOfRecordSets":2,"zoneType":"Public"}}'
     headers:
       cache-control:
       - private
@@ -31,9 +31,9 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 26 Jun 2023 18:48:52 GMT
+      - Tue, 27 Jun 2023 03:25:12 GMT
       etag:
-      - afaa89ec-3b32-431a-a326-00026be60138
+      - 577b880b-486f-4bd2-8ae2-d951db5e1a9b
       strict-transport-security:
       - max-age=31536000; includeSubDomains
       x-cache:
@@ -41,9 +41,9 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11995'
+      - '11993'
       x-msedge-ref:
-      - 'Ref A: A598113A6BF54BBE9BC0587245417195 Ref B: CO6AA3150218025 Ref C: 2023-06-26T18:48:51Z'
+      - 'Ref A: 1FD6DC1B2E30411F96D6E4A6A2659DF6 Ref B: CO6AA3150217029 Ref C: 2023-06-27T03:25:11Z'
       x-powered-by:
       - ASP.NET
     status:
@@ -84,7 +84,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 26 Jun 2023 18:48:56 GMT
+      - Tue, 27 Jun 2023 03:25:16 GMT
       strict-transport-security:
       - max-age=31536000; includeSubDomains
       x-aspnet-version:
@@ -93,10 +93,12 @@ interactions:
       - CONFIG_NOCACHE
       x-content-type-options:
       - nosniff
+      x-ms-operation-identifier:
+      - tenantId=57df7b3a-a338-4424-86ea-cb8d56af3694,objectId=83668d57-c602-450f-a75c-5339b5afd3ea/centralus/a1a6ee38-f107-470a-8de5-04b2b61f47eb
       x-ms-ratelimit-remaining-subscription-resource-requests:
       - '10799'
       x-msedge-ref:
-      - 'Ref A: C776000E8B2644E9B55FB94099423EE4 Ref B: CO6AA3150218009 Ref C: 2023-06-26T18:48:53Z'
+      - 'Ref A: BFAE0287FA8847F1A535A21057F963BE Ref B: CO6AA3150219019 Ref C: 2023-06-27T03:25:13Z'
       x-powered-by:
       - ASP.NET
     status:
@@ -122,10 +124,10 @@ interactions:
       User-Agent:
       - AZURECLI/2.49.0 (AAZ) azsdk-python-core/1.26.0 Python/3.11.2 (Windows-10-10.0.22621-SP0)
     method: PUT
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_dns_alias000001/providers/Microsoft.Network/dnsZones/mytestzone1.com/a/a1?api-version=2023-07-01-preview
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_dns_alias000001/providers/Microsoft.Network/dnsZones/mytestzone1.com/A/a1?api-version=2023-07-01-preview
   response:
     body:
-      string: '{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/dnszones\/mytestzone1.com\/A\/a1","name":"a1","type":"Microsoft.Network\/dnszones\/A","etag":"4d16567c-28af-4373-9dfc-f7d088601f4f","properties":{"fqdn":"a1.mytestzone1.com.","TTL":30,"targetResource":{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/trafficManagerProfiles\/tm1"},"provisioningState":"Succeeded"}}'
+      string: '{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/dnszones\/mytestzone1.com\/A\/a1","name":"a1","type":"Microsoft.Network\/dnszones\/A","etag":"ddcb0f00-6d14-4594-abc3-621a87105bb9","properties":{"fqdn":"a1.mytestzone1.com.","TTL":30,"targetResource":{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/trafficManagerProfiles\/tm1"},"provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - private
@@ -134,9 +136,9 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 26 Jun 2023 18:49:01 GMT
+      - Tue, 27 Jun 2023 03:25:21 GMT
       etag:
-      - 4d16567c-28af-4373-9dfc-f7d088601f4f
+      - ddcb0f00-6d14-4594-abc3-621a87105bb9
       strict-transport-security:
       - max-age=31536000; includeSubDomains
       x-cache:
@@ -144,9 +146,9 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11982'
+      - '11998'
       x-msedge-ref:
-      - 'Ref A: 3AB8975EB17C47569D5354CA22A13C03 Ref B: CO6AA3150217027 Ref C: 2023-06-26T18:48:56Z'
+      - 'Ref A: FBE4738F2CBD43948F70713760D405C5 Ref B: CO6AA3150219045 Ref C: 2023-06-27T03:25:16Z'
       x-powered-by:
       - ASP.NET
     status:
@@ -184,7 +186,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 26 Jun 2023 18:49:02 GMT
+      - Tue, 27 Jun 2023 03:25:21 GMT
       strict-transport-security:
       - max-age=31536000; includeSubDomains
       x-cache:
@@ -194,7 +196,7 @@ interactions:
       x-ms-ratelimit-remaining-subscription-resource-requests:
       - '11999'
       x-msedge-ref:
-      - 'Ref A: BE16EC5B48A9449483738AEAA836BFDB Ref B: CO6AA3150220047 Ref C: 2023-06-26T18:49:02Z'
+      - 'Ref A: 0C4C871C9BBE451C93479B8636B0C310 Ref B: CO6AA3150219039 Ref C: 2023-06-27T03:25:22Z'
       x-powered-by:
       - ASP.NET
     status:
@@ -219,7 +221,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_dns_alias000001/providers/Microsoft.Network/dnsZones/mytestzone1.com/A/a1?api-version=2023-07-01-preview
   response:
     body:
-      string: '{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/dnszones\/mytestzone1.com\/A\/a1","name":"a1","type":"Microsoft.Network\/dnszones\/A","etag":"4d16567c-28af-4373-9dfc-f7d088601f4f","properties":{"fqdn":"a1.mytestzone1.com.","TTL":30,"targetResource":{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/trafficManagerProfiles\/tm1"},"provisioningState":"Succeeded"}}'
+      string: '{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/dnszones\/mytestzone1.com\/A\/a1","name":"a1","type":"Microsoft.Network\/dnszones\/A","etag":"ddcb0f00-6d14-4594-abc3-621a87105bb9","properties":{"fqdn":"a1.mytestzone1.com.","TTL":30,"targetResource":{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/trafficManagerProfiles\/tm1"},"provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - private
@@ -228,9 +230,9 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 26 Jun 2023 18:49:02 GMT
+      - Tue, 27 Jun 2023 03:25:22 GMT
       etag:
-      - 4d16567c-28af-4373-9dfc-f7d088601f4f
+      - ddcb0f00-6d14-4594-abc3-621a87105bb9
       strict-transport-security:
       - max-age=31536000; includeSubDomains
       x-cache:
@@ -238,16 +240,16 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11996'
+      - '11999'
       x-msedge-ref:
-      - 'Ref A: B9190C6CE8E84F1AAE437072FE7621BE Ref B: CO6AA3150220023 Ref C: 2023-06-26T18:49:02Z'
+      - 'Ref A: E0BFA995FBE243A8B9CE5510999E9311 Ref B: CO6AA3150220029 Ref C: 2023-06-27T03:25:22Z'
       x-powered-by:
       - ASP.NET
     status:
       code: 200
       message: OK
 - request:
-    body: '{"etag": "4d16567c-28af-4373-9dfc-f7d088601f4f", "properties": {"TTL":
+    body: '{"etag": "ddcb0f00-6d14-4594-abc3-621a87105bb9", "properties": {"TTL":
       30}}'
     headers:
       Accept:
@@ -270,7 +272,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_dns_alias000001/providers/Microsoft.Network/dnsZones/mytestzone1.com/A/a1?api-version=2023-07-01-preview
   response:
     body:
-      string: '{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/dnszones\/mytestzone1.com\/A\/a1","name":"a1","type":"Microsoft.Network\/dnszones\/A","etag":"f66f1676-60e7-4e47-86d6-a405cc75de6f","properties":{"fqdn":"a1.mytestzone1.com.","TTL":30,"ARecords":[],"targetResource":{},"provisioningState":"Succeeded"}}'
+      string: '{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/dnszones\/mytestzone1.com\/A\/a1","name":"a1","type":"Microsoft.Network\/dnszones\/A","etag":"a6e4ee92-68c3-42b1-9e7c-91a1b709c31c","properties":{"fqdn":"a1.mytestzone1.com.","TTL":30,"ARecords":[],"targetResource":{},"provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - private
@@ -279,9 +281,9 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 26 Jun 2023 18:49:07 GMT
+      - Tue, 27 Jun 2023 03:25:27 GMT
       etag:
-      - f66f1676-60e7-4e47-86d6-a405cc75de6f
+      - a6e4ee92-68c3-42b1-9e7c-91a1b709c31c
       strict-transport-security:
       - max-age=31536000; includeSubDomains
       x-cache:
@@ -289,9 +291,9 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11982'
+      - '11999'
       x-msedge-ref:
-      - 'Ref A: AEEBE13149494974A996AF152D4331EC Ref B: CO6AA3150220023 Ref C: 2023-06-26T18:49:03Z'
+      - 'Ref A: D51C52DA1B174ED6829286C1A6764B37 Ref B: CO6AA3150220029 Ref C: 2023-06-27T03:25:23Z'
       x-powered-by:
       - ASP.NET
     status:
