add test for agent_rg. For workspace we need to provide a subscription and setup LA manually there

--- a/linter_exclusions.yml
+++ b/linter_exclusions.yml
@@ -3449,6 +3449,9 @@ sql vm update:
     prompt:
       rule_exclusions:
       - no_parameter_defaults_for_update_commands
+    workspace_sub:
+      rule_exclusions:
+      - missing_parameter_test_coverage
 staticwebapp create:
   parameters:
     app_artifact_location:
