Add integration tests

--- a/src/azure-cli/azure/cli/command_modules/graphservices/tests/latest/recordings/test_billing_flow.yaml
+++ b/src/azure-cli/azure/cli/command_modules/graphservices/tests/latest/recordings/test_billing_flow.yaml
@@ -27,11 +27,11 @@ interactions:
       content-type:
       - application/json;odata.metadata=minimal;odata.streaming=true;IEEE754Compatible=false;charset=utf-8
       date:
-      - Thu, 29 Jun 2023 06:27:52 GMT
+      - Wed, 28 Jun 2023 07:45:36 GMT
       odata-version:
       - '4.0'
       request-id:
-      - 86e56e24-5797-4320-9ef3-d351387c579b
+      - cc5c5d99-bfd1-42f3-96e2-4e1a228a7aaf
       strict-transport-security:
       - max-age=31536000
       transfer-encoding:
@@ -39,7 +39,7 @@ interactions:
       vary:
       - Accept-Encoding
       x-ms-ags-diagnostic:
-      - '{"ServerInfo":{"DataCenter":"South Central US","Slice":"E","Ring":"5","ScaleUnit":"001","RoleInstance":"SA2PEPF000007E1"}}'
+      - '{"ServerInfo":{"DataCenter":"South Central US","Slice":"E","Ring":"5","ScaleUnit":"002","RoleInstance":"SN1PEPF00014915"}}'
       x-ms-resource-unit:
       - '2'
     status:
@@ -69,9 +69,9 @@ interactions:
   response:
     body:
       string: '{"@odata.context": "https://graph.microsoft.com/v1.0/$metadata#applications/$entity",
-        "id": "f0c13b65-0db2-46f9-b6ca-5ce27462ab2d", "deletedDateTime": null, "appId":
-        "5fa0b9e3-043b-4b40-8e52-61e83d3f3037", "applicationTemplateId": null, "disabledByMicrosoftStatus":
-        null, "createdDateTime": "2023-06-29T06:27:52.5231487Z", "displayName": "azcliapp000003",
+        "id": "39f77e30-6d3f-4048-8260-289f3b90b4fb", "deletedDateTime": null, "appId":
+        "ebbbc778-55ef-4bd6-b834-715fb01ae256", "applicationTemplateId": null, "disabledByMicrosoftStatus":
+        null, "createdDateTime": "2023-06-28T07:45:37.4235386Z", "displayName": "azcliapp000003",
         "description": null, "groupMembershipClaims": null, "identifierUris": [],
         "isDeviceOnlyAuthSupported": null, "isFallbackPublicClient": null, "notes":
         null, "publisherDomain": "growthandmonetization.onmicrosoft.com", "serviceManagementReference":
@@ -97,13 +97,13 @@ interactions:
       content-type:
       - application/json;odata.metadata=minimal;odata.streaming=true;IEEE754Compatible=false;charset=utf-8
       date:
-      - Thu, 29 Jun 2023 06:27:53 GMT
+      - Wed, 28 Jun 2023 07:45:39 GMT
       location:
-      - https://graph.microsoft.com/v2/67419183-f612-47fe-9b45-48fa5b880dc6/directoryObjects/f0c13b65-0db2-46f9-b6ca-5ce27462ab2d/Microsoft.DirectoryServices.Application
+      - https://graph.microsoft.com/v2/67419183-f612-47fe-9b45-48fa5b880dc6/directoryObjects/39f77e30-6d3f-4048-8260-289f3b90b4fb/Microsoft.DirectoryServices.Application
       odata-version:
       - '4.0'
       request-id:
-      - dd8552fe-8766-405a-b214-42164cf868f1
+      - 3f67e787-2533-4869-a373-070ddebbad54
       strict-transport-security:
       - max-age=31536000
       transfer-encoding:
@@ -111,14 +111,14 @@ interactions:
       vary:
       - Accept-Encoding
       x-ms-ags-diagnostic:
-      - '{"ServerInfo":{"DataCenter":"South Central US","Slice":"E","Ring":"5","ScaleUnit":"001","RoleInstance":"SA2PEPF00000851"}}'
+      - '{"ServerInfo":{"DataCenter":"South Central US","Slice":"E","Ring":"5","ScaleUnit":"002","RoleInstance":"SN1PEPF0001880B"}}'
       x-ms-resource-unit:
       - '1'
     status:
       code: 201
       message: Created
 - request:
-    body: '{"location": "global", "properties": {"appId": "5fa0b9e3-043b-4b40-8e52-61e83d3f3037"},
+    body: '{"location": "global", "properties": {"appId": "ebbbc778-55ef-4bd6-b834-715fb01ae256"},
       "tags": {"key1": "value1"}}'
     headers:
       Accept:
@@ -141,7 +141,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.GraphServices/accounts/azcliacc000002?api-version=2023-04-13
   response:
     body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.GraphServices/accounts/azcliacc000002","name":"azcliacc000002","type":"microsoft.graphservices/accounts","location":"global","tags":{"key1":"value1"},"systemData":{"createdByType":"User","createdAt":"2023-06-29T06:29:55.8314309Z","lastModifiedByType":"User","lastModifiedAt":"2023-06-29T06:29:55.8314309Z"},"properties":{"appId":"5fa0b9e3-043b-4b40-8e52-61e83d3f3037","billingPlanId":"5c4bbd3d-97de-4469-8c27-0439bf03aac0","provisioningState":"Succeeded"}}'
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.GraphServices/accounts/azcliacc000002","name":"azcliacc000002","type":"microsoft.graphservices/accounts","location":"global","tags":{"key1":"value1"},"systemData":{"createdByType":"User","createdAt":"2023-06-28T07:47:41.4792016Z","lastModifiedByType":"User","lastModifiedAt":"2023-06-28T07:47:41.4792016Z"},"properties":{"appId":"ebbbc778-55ef-4bd6-b834-715fb01ae256","billingPlanId":"7bf03e1c-2ce2-4f6e-aa98-f4b06af871ee","provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - no-cache
@@ -150,15 +150,15 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 29 Jun 2023 06:30:00 GMT
+      - Wed, 28 Jun 2023 07:47:43 GMT
       etag:
-      - '"000053f2-0000-0500-0000-649d24e80000"'
+      - '"00001e0a-0000-0500-0000-649be59f0000"'
       expires:
       - '-1'
       mise-correlation-id:
-      - 4c7ab2d9-18fe-48dd-ba88-d79cf811b63b
+      - 8a8ef856-ba64-417a-be2d-98192b457ec7
       ms-cv:
-      - jHd5TXPWo0Ci4/E26MbMUw.0
+      - sE1/02tqU0eMjBfbxF7Xtw.0
       pragma:
       - no-cache
       strict-transport-security:
@@ -195,7 +195,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.GraphServices/accounts/azcliacc000002?api-version=2023-04-13
   response:
     body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.GraphServices/accounts/azcliacc000002","name":"azcliacc000002","type":"microsoft.graphservices/accounts","location":"global","tags":{"key1":"value1"},"systemData":{"createdByType":"User","createdAt":"2023-06-29T06:29:55.8314309Z","lastModifiedByType":"User","lastModifiedAt":"2023-06-29T06:29:55.8314309Z"},"properties":{"appId":"5fa0b9e3-043b-4b40-8e52-61e83d3f3037","billingPlanId":"5c4bbd3d-97de-4469-8c27-0439bf03aac0","provisioningState":"Succeeded"}}'
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.GraphServices/accounts/azcliacc000002","name":"azcliacc000002","type":"microsoft.graphservices/accounts","location":"global","tags":{"key1":"value1"},"systemData":{"createdByType":"User","createdAt":"2023-06-28T07:47:41.4792016Z","lastModifiedByType":"User","lastModifiedAt":"2023-06-28T07:47:41.4792016Z"},"properties":{"appId":"ebbbc778-55ef-4bd6-b834-715fb01ae256","billingPlanId":"7bf03e1c-2ce2-4f6e-aa98-f4b06af871ee","provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - no-cache
@@ -204,9 +204,9 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 29 Jun 2023 06:30:01 GMT
+      - Wed, 28 Jun 2023 07:47:45 GMT
       etag:
-      - '"000053f2-0000-0500-0000-649d24e80000"'
+      - '"00001e0a-0000-0500-0000-649be59f0000"'
       expires:
       - '-1'
       pragma:
@@ -236,14 +236,14 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --resource-group --name --tags --location
+      - --resource-group --name --tags
       User-Agent:
       - AZURECLI/2.49.0 (AAZ) azsdk-python-core/1.26.0 Python/3.10.0 (Windows-10-10.0.22621-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.GraphServices/accounts/azcliacc000002?api-version=2023-04-13
   response:
     body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.GraphServices/accounts/azcliacc000002","name":"azcliacc000002","type":"microsoft.graphservices/accounts","location":"global","tags":{"key1":"value1"},"systemData":{"createdByType":"User","createdAt":"2023-06-29T06:29:55.8314309Z","lastModifiedByType":"User","lastModifiedAt":"2023-06-29T06:29:55.8314309Z"},"properties":{"appId":"5fa0b9e3-043b-4b40-8e52-61e83d3f3037","billingPlanId":"5c4bbd3d-97de-4469-8c27-0439bf03aac0","provisioningState":"Succeeded"}}'
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.GraphServices/accounts/azcliacc000002","name":"azcliacc000002","type":"microsoft.graphservices/accounts","location":"global","tags":{"key1":"value1"},"systemData":{"createdByType":"User","createdAt":"2023-06-28T07:47:41.4792016Z","lastModifiedByType":"User","lastModifiedAt":"2023-06-28T07:47:41.4792016Z"},"properties":{"appId":"ebbbc778-55ef-4bd6-b834-715fb01ae256","billingPlanId":"7bf03e1c-2ce2-4f6e-aa98-f4b06af871ee","provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - no-cache
@@ -252,9 +252,9 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 29 Jun 2023 06:30:02 GMT
+      - Wed, 28 Jun 2023 07:47:47 GMT
       etag:
-      - '"000053f2-0000-0500-0000-649d24e80000"'
+      - '"00001e0a-0000-0500-0000-649be59f0000"'
       expires:
       - '-1'
       pragma:
@@ -273,7 +273,7 @@ interactions:
       code: 200
       message: OK
 - request:
-    body: '{"location": "global", "properties": {"appId": "5fa0b9e3-043b-4b40-8e52-61e83d3f3037"},
+    body: '{"location": "global", "properties": {"appId": "ebbbc778-55ef-4bd6-b834-715fb01ae256"},
       "tags": {"key1": "value1", "updatedKey1": "updatedValue1"}}'
     headers:
       Accept:
@@ -289,14 +289,14 @@ interactions:
       Content-Type:
       - application/json
       ParameterSetName:
-      - --resource-group --name --tags --location
+      - --resource-group --name --tags
       User-Agent:
       - AZURECLI/2.49.0 (AAZ) azsdk-python-core/1.26.0 Python/3.10.0 (Windows-10-10.0.22621-SP0)
     method: PUT
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.GraphServices/accounts/azcliacc000002?api-version=2023-04-13
   response:
     body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.GraphServices/accounts/azcliacc000002","name":"azcliacc000002","type":"microsoft.graphservices/accounts","location":"global","tags":{"key1":"value1","updatedKey1":"updatedValue1"},"systemData":{"createdByType":"User","createdAt":"2023-06-29T06:29:55.8314309Z","lastModifiedByType":"User","lastModifiedAt":"2023-06-29T06:30:02.7876918Z"},"properties":{"appId":"5fa0b9e3-043b-4b40-8e52-61e83d3f3037","billingPlanId":"5c4bbd3d-97de-4469-8c27-0439bf03aac0","provisioningState":"Succeeded"}}'
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.GraphServices/accounts/azcliacc000002","name":"azcliacc000002","type":"microsoft.graphservices/accounts","location":"global","tags":{"key1":"value1","updatedKey1":"updatedValue1"},"systemData":{"createdByType":"User","createdAt":"2023-06-28T07:47:41.4792016Z","lastModifiedByType":"User","lastModifiedAt":"2023-06-28T07:47:47.5405964Z"},"properties":{"appId":"ebbbc778-55ef-4bd6-b834-715fb01ae256","billingPlanId":"7bf03e1c-2ce2-4f6e-aa98-f4b06af871ee","provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - no-cache
@@ -305,15 +305,15 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 29 Jun 2023 06:30:06 GMT
+      - Wed, 28 Jun 2023 07:47:51 GMT
       etag:
-      - '"000055f2-0000-0500-0000-649d24ee0000"'
+      - '"0000660a-0000-0500-0000-649be5a70000"'
       expires:
       - '-1'
       mise-correlation-id:
-      - 849b6d24-e407-41fe-8b05-f6e8a6b0764d
+      - 73873e68-9100-42a0-9c25-9e6ddaf58fc6
       ms-cv:
-      - +T6ggKPXFEilwc86vkUc2Q.0
+      - orOXb4UiT0mVKwte6Bsxdg.0
       pragma:
       - no-cache
       strict-transport-security:
