--- a/.github/ISSUE_TEMPLATE/Service_team_request.yml
+++ b/.github/ISSUE_TEMPLATE/Service_team_request.yml
@@ -24,7 +24,7 @@ body:
         - It can ensure the style and consistency of code, so it also reduces the burden of PR review.
         - It can improve code quality and reduce the occurrence of bugs.
         ......
-        If you are interested in it and would like to learn more, please contact our CodeGen expert @kairu-ms
+        If you are interested in it and would like to learn more, please get support via [azure-cli-codegen-channel](https://aka.ms/azure-cli-codegen-channel).
       options:
         - label: No need to upgrade Python SDK or the Python SDK is ready.
           required: true
