--- a/scripts/live_test/CLITest.yml
+++ b/scripts/live_test/CLITest.yml
@@ -79,8 +79,8 @@ stages:
           Target: cosmosdb
         databoxedge:
           Target: databoxedge
-        deploymentmanager:
-          Target: deploymentmanager
+        #deploymentmanager:
+        #  Target: deploymentmanager
         dla:
           Target: dla
         dls:
@@ -119,8 +119,8 @@ stages:
           Target: monitor
         mysql:
           Target: mysql
-        natgateway:
-          Target: natgateway
+        #natgateway:
+        #  Target: natgateway
         netappfiles:
           Target: netappfiles
         network:
@@ -183,16 +183,16 @@ stages:
           Target: ext-aks-preview
         ext-alertsmanagement:
           Target: ext-alertsmanagement
-        ext-alias:
-          Target: ext-alias
+        #ext-alias:
+        #  Target: ext-alias
         ext-amg:
           Target: ext-amg
         ext-application-insights:
           Target: ext-application-insights
         ext-appservice-kube:
           Target: ext-appservice-kube
-        ext-attestation:
-          Target: ext-attestation
+        #ext-attestation:
+        #  Target: ext-attestation
         ext-authV2:
           Target: ext-authV2
         ext-automanage:
@@ -213,8 +213,8 @@ stages:
           Target: ext-change-analysis
         ext-cli-translator:
           Target: ext-cli-translator
-        ext-cloudservice:
-          Target: ext-cloudservice
+        #ext-cloudservice:
+        #  Target: ext-cloudservice
         ext-communication:
           Target: ext-communication
         ext-confcom:
@@ -233,8 +233,8 @@ stages:
           Target: ext-connection-monitor-preview
         ext-containerapp:
           Target: ext-containerapp
-        ext-containerapp-preview:
-          Target: ext-containerapp-preview
+        #ext-containerapp-preview:
+        #  Target: ext-containerapp-preview
         ext-cosmosdb-preview:
           Target: ext-cosmosdb-preview
         ext-costmanagement:
@@ -259,8 +259,8 @@ stages:
           Target: ext-db-up
         ext-desktopvirtualization:
           Target: ext-desktopvirtualization
-        ext-dev-spaces:
-          Target: ext-dev-spaces
+        #ext-dev-spaces:
+        #  Target: ext-dev-spaces
         ext-devcenter:
           Target: ext-devcenter
         ext-diskpool:
@@ -279,10 +279,10 @@ stages:
           Target: ext-elastic
         ext-elastic-san:
           Target: ext-elastic-san
-        ext-eventgrid:
-          Target: ext-eventgrid
-        ext-express-route-cross-connection:
-          Target: ext-express-route-cross-connection
+        #ext-eventgrid:
+        #  Target: ext-eventgrid
+        #ext-express-route-cross-connection:
+        #  Target: ext-express-route-cross-connection
         ext-fleet:
           Target: ext-fleet
         ext-fluid-relay:
@@ -291,12 +291,12 @@ stages:
           Target: ext-footprint
         ext-front-door:
           Target: ext-front-door
-        ext-functionapp:
-          Target: ext-functionapp
+        #ext-functionapp:
+        #  Target: ext-functionapp
         ext-guestconfig:
           Target: ext-guestconfig
-        ext-hack:
-          Target: ext-hack
+        #ext-hack:
+        #  Target: ext-hack
         ext-hardware-security-modules:
           Target: ext-hardware-security-modules
         ext-healthbot:
@@ -305,8 +305,8 @@ stages:
           Target: ext-healthcareapis
         ext-hpc-cache:
           Target: ext-hpc-cache
-        ext-image-copy-extension:
-          Target: ext-image-copy-extension
+        #ext-image-copy-extension:
+        #  Target: ext-image-copy-extension
         ext-image-gallery:
           Target: ext-image-gallery
         ext-import-export:
@@ -323,8 +323,8 @@ stages:
           Target: ext-k8s-configuration
         ext-k8s-extension:
           Target: ext-k8s-extension
-        ext-kusto:
-          Target: ext-kusto
+        #ext-kusto:
+        #  Target: ext-kusto
         ext-load:
           Target: ext-load
         ext-log-analytics:
@@ -379,8 +379,8 @@ stages:
           Target: ext-quantum
         ext-quota:
           Target: ext-quota
-        ext-rdbms-connect:
-          Target: ext-rdbms-connect
+        #ext-rdbms-connect:
+        #  Target: ext-rdbms-connect
         ext-redisenterprise:
           Target: ext-redisenterprise
         ext-reservation:
@@ -433,8 +433,8 @@ stages:
           Target: ext-timeseriesinsights
         ext-traffic-collector:
           Target: ext-traffic-collector
-        ext-virtual-network-tap:
-          Target: ext-virtual-network-tap
+        #ext-virtual-network-tap:
+        #  Target: ext-virtual-network-tap
         ext-virtual-wan:
           Target: ext-virtual-wan
         ext-vm-repair:
@@ -443,8 +443,8 @@ stages:
           Target: ext-vmware
         ext-voice-service:
           Target: ext-voice-service
-        ext-webapp:
-          Target: ext-webapp
+        #ext-webapp:
+        #  Target: ext-webapp
         ext-webpubsub:
           Target: ext-webpubsub
     pool:
@@ -643,8 +643,8 @@ stages:
           Target: cosmosdb
         databoxedge:
           Target: databoxedge
-        deploymentmanager:
-          Target: deploymentmanager
+        #deploymentmanager:
+        #  Target: deploymentmanager
         dla:
           Target: dla
         dls:
@@ -683,8 +683,8 @@ stages:
           Target: monitor
         mysql:
           Target: mysql
-        natgateway:
-          Target: natgateway
+        #natgateway:
+        #  Target: natgateway
         netappfiles:
           Target: netappfiles
         network:
@@ -747,16 +747,16 @@ stages:
           Target: ext-aks-preview
         ext-alertsmanagement:
           Target: ext-alertsmanagement
-        ext-alias:
-          Target: ext-alias
+        #ext-alias:
+        #  Target: ext-alias
         ext-amg:
           Target: ext-amg
         ext-application-insights:
           Target: ext-application-insights
         ext-appservice-kube:
           Target: ext-appservice-kube
-        ext-attestation:
-          Target: ext-attestation
+        #ext-attestation:
+        #  Target: ext-attestation
         ext-authV2:
           Target: ext-authV2
         ext-automanage:
@@ -777,8 +777,8 @@ stages:
           Target: ext-change-analysis
         ext-cli-translator:
           Target: ext-cli-translator
-        ext-cloudservice:
-          Target: ext-cloudservice
+        #ext-cloudservice:
+        #  Target: ext-cloudservice
         ext-communication:
           Target: ext-communication
         ext-confcom:
@@ -797,8 +797,8 @@ stages:
           Target: ext-connection-monitor-preview
         ext-containerapp:
           Target: ext-containerapp
-        ext-containerapp-preview:
-          Target: ext-containerapp-preview
+        #ext-containerapp-preview:
+        #  Target: ext-containerapp-preview
         ext-cosmosdb-preview:
           Target: ext-cosmosdb-preview
         ext-costmanagement:
@@ -823,8 +823,8 @@ stages:
           Target: ext-db-up
         ext-desktopvirtualization:
           Target: ext-desktopvirtualization
-        ext-dev-spaces:
-          Target: ext-dev-spaces
+        #ext-dev-spaces:
+        #  Target: ext-dev-spaces
         ext-devcenter:
           Target: ext-devcenter
         ext-diskpool:
@@ -843,10 +843,10 @@ stages:
           Target: ext-elastic
         ext-elastic-san:
           Target: ext-elastic-san
-        ext-eventgrid:
-          Target: ext-eventgrid
-        ext-express-route-cross-connection:
-          Target: ext-express-route-cross-connection
+        #ext-eventgrid:
+        #  Target: ext-eventgrid
+        #ext-express-route-cross-connection:
+        #  Target: ext-express-route-cross-connection
         ext-fleet:
           Target: ext-fleet
         ext-fluid-relay:
@@ -855,12 +855,12 @@ stages:
           Target: ext-footprint
         ext-front-door:
           Target: ext-front-door
-        ext-functionapp:
-          Target: ext-functionapp
+        #ext-functionapp:
+        #  Target: ext-functionapp
         ext-guestconfig:
           Target: ext-guestconfig
-        ext-hack:
-          Target: ext-hack
+        #ext-hack:
+        #  Target: ext-hack
         ext-hardware-security-modules:
           Target: ext-hardware-security-modules
         ext-healthbot:
@@ -869,8 +869,8 @@ stages:
           Target: ext-healthcareapis
         ext-hpc-cache:
           Target: ext-hpc-cache
-        ext-image-copy-extension:
-          Target: ext-image-copy-extension
+        #ext-image-copy-extension:
+        #  Target: ext-image-copy-extension
         ext-image-gallery:
           Target: ext-image-gallery
         ext-import-export:
@@ -887,8 +887,8 @@ stages:
           Target: ext-k8s-configuration
         ext-k8s-extension:
           Target: ext-k8s-extension
-        ext-kusto:
-          Target: ext-kusto
+        #ext-kusto:
+        #  Target: ext-kusto
         ext-load:
           Target: ext-load
         ext-log-analytics:
@@ -943,8 +943,8 @@ stages:
           Target: ext-quantum
         ext-quota:
           Target: ext-quota
-        ext-rdbms-connect:
-          Target: ext-rdbms-connect
+        #ext-rdbms-connect:
+        #  Target: ext-rdbms-connect
         ext-redisenterprise:
           Target: ext-redisenterprise
         ext-reservation:
@@ -997,8 +997,8 @@ stages:
           Target: ext-timeseriesinsights
         ext-traffic-collector:
           Target: ext-traffic-collector
-        ext-virtual-network-tap:
-          Target: ext-virtual-network-tap
+        #ext-virtual-network-tap:
+        #  Target: ext-virtual-network-tap
         ext-virtual-wan:
           Target: ext-virtual-wan
         ext-vm-repair:
@@ -1007,8 +1007,8 @@ stages:
           Target: ext-vmware
         ext-voice-service:
           Target: ext-voice-service
-        ext-webapp:
-          Target: ext-webapp
+        #ext-webapp:
+        #  Target: ext-webapp
         ext-webpubsub:
           Target: ext-webpubsub
     pool:
@@ -1207,8 +1207,8 @@ stages:
           Target: cosmosdb
         databoxedge:
           Target: databoxedge
-        deploymentmanager:
-          Target: deploymentmanager
+        #deploymentmanager:
+        #  Target: deploymentmanager
         dla:
           Target: dla
         dls:
@@ -1247,8 +1247,8 @@ stages:
           Target: monitor
         mysql:
           Target: mysql
-        natgateway:
-          Target: natgateway
+        #natgateway:
+        #  Target: natgateway
         netappfiles:
           Target: netappfiles
         network:
@@ -1311,16 +1311,16 @@ stages:
           Target: ext-aks-preview
         ext-alertsmanagement:
           Target: ext-alertsmanagement
-        ext-alias:
-          Target: ext-alias
+        #ext-alias:
+        #  Target: ext-alias
         ext-amg:
           Target: ext-amg
         ext-application-insights:
           Target: ext-application-insights
         ext-appservice-kube:
           Target: ext-appservice-kube
-        ext-attestation:
-          Target: ext-attestation
+        #ext-attestation:
+        #  Target: ext-attestation
         ext-authV2:
           Target: ext-authV2
         ext-automanage:
@@ -1341,8 +1341,8 @@ stages:
           Target: ext-change-analysis
         ext-cli-translator:
           Target: ext-cli-translator
-        ext-cloudservice:
-          Target: ext-cloudservice
+        #ext-cloudservice:
+        #  Target: ext-cloudservice
         ext-communication:
           Target: ext-communication
         ext-confcom:
@@ -1361,8 +1361,8 @@ stages:
           Target: ext-connection-monitor-preview
         ext-containerapp:
           Target: ext-containerapp
-        ext-containerapp-preview:
-          Target: ext-containerapp-preview
+        #ext-containerapp-preview:
+        #  Target: ext-containerapp-preview
         ext-cosmosdb-preview:
           Target: ext-cosmosdb-preview
         ext-costmanagement:
@@ -1387,8 +1387,8 @@ stages:
           Target: ext-db-up
         ext-desktopvirtualization:
           Target: ext-desktopvirtualization
-        ext-dev-spaces:
-          Target: ext-dev-spaces
+        #ext-dev-spaces:
+        #  Target: ext-dev-spaces
         ext-devcenter:
           Target: ext-devcenter
         ext-diskpool:
@@ -1407,10 +1407,10 @@ stages:
           Target: ext-elastic
         ext-elastic-san:
           Target: ext-elastic-san
-        ext-eventgrid:
-          Target: ext-eventgrid
-        ext-express-route-cross-connection:
-          Target: ext-express-route-cross-connection
+        #ext-eventgrid:
+        #  Target: ext-eventgrid
+        #ext-express-route-cross-connection:
+        #  Target: ext-express-route-cross-connection
         ext-fleet:
           Target: ext-fleet
         ext-fluid-relay:
@@ -1419,12 +1419,12 @@ stages:
           Target: ext-footprint
         ext-front-door:
           Target: ext-front-door
-        ext-functionapp:
-          Target: ext-functionapp
+        #ext-functionapp:
+        #  Target: ext-functionapp
         ext-guestconfig:
           Target: ext-guestconfig
-        ext-hack:
-          Target: ext-hack
+        #ext-hack:
+        #  Target: ext-hack
         ext-hardware-security-modules:
           Target: ext-hardware-security-modules
         ext-healthbot:
@@ -1433,8 +1433,8 @@ stages:
           Target: ext-healthcareapis
         ext-hpc-cache:
           Target: ext-hpc-cache
-        ext-image-copy-extension:
-          Target: ext-image-copy-extension
+        #ext-image-copy-extension:
+        #  Target: ext-image-copy-extension
         ext-image-gallery:
           Target: ext-image-gallery
         ext-import-export:
@@ -1451,8 +1451,8 @@ stages:
           Target: ext-k8s-configuration
         ext-k8s-extension:
           Target: ext-k8s-extension
-        ext-kusto:
-          Target: ext-kusto
+        #ext-kusto:
+        #  Target: ext-kusto
         ext-load:
           Target: ext-load
         ext-log-analytics:
@@ -1507,8 +1507,8 @@ stages:
           Target: ext-quantum
         ext-quota:
           Target: ext-quota
-        ext-rdbms-connect:
-          Target: ext-rdbms-connect
+        #ext-rdbms-connect:
+        #  Target: ext-rdbms-connect
         ext-redisenterprise:
           Target: ext-redisenterprise
         ext-reservation:
@@ -1561,8 +1561,8 @@ stages:
           Target: ext-timeseriesinsights
         ext-traffic-collector:
           Target: ext-traffic-collector
-        ext-virtual-network-tap:
-          Target: ext-virtual-network-tap
+        #ext-virtual-network-tap:
+        #  Target: ext-virtual-network-tap
         ext-virtual-wan:
           Target: ext-virtual-wan
         ext-vm-repair:
@@ -1571,8 +1571,8 @@ stages:
           Target: ext-vmware
         ext-voice-service:
           Target: ext-voice-service
-        ext-webapp:
-          Target: ext-webapp
+        #ext-webapp:
+        #  Target: ext-webapp
         ext-webpubsub:
           Target: ext-webpubsub
     pool:
