--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -506,7 +506,8 @@ jobs:
 
 - job: TestExtensionsLoading
   displayName: Test Extensions Loading
-  condition: succeeded()
+  #  condition: succeeded()
+  condition: always()
   timeoutInMinutes: 40
 
   pool:
