--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -506,8 +506,8 @@ jobs:
 
 - job: TestExtensionsLoading
   displayName: Test Extensions Loading
-  #  condition: succeeded()
-  condition: always()
+  condition: succeeded()
+  continueOnError: true
   timeoutInMinutes: 40
 
   pool:
