--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,7 +46,7 @@ jobs:
       set -ev
       . env/bin/activate
       azdev test --no-exitfirst --verbose --series cloud --profile latest --xml-path /home/cloudtest/.azdev/env_config/mnt/vss/_work/1/s/env/test_results_3.9_latest_7.serial.xml --pytest-args '-o junit_family=xunit1 --durations=10 --tb=no'
-      azdev test --no-exitfirst --verbose acr --profile latest --xml-path /home/cloudtest/.azdev/env_config/mnt/vss/_work/1/s/env/test_results_3.9_latest_7.parallel.xml --pytest-args '-o junit_family=xunit1 --durations=10 --tb=no'
+      azdev test --verbose --debug acr --profile latest
 #- job: CheckPullRequest
 #  displayName: "Check the Format of Pull Request Title and Content"
 #  condition: and(succeeded(), in(variables['System.PullRequest.TargetBranch'], 'dev', 'release'))
